...
    let searchController = UISearchController(searchResultsController: nil)
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        searchController.searchResultsUpdater = self
        searchController.searchBar.placeholder = "Search categories"
        searchController.searchBar.delegate = self
        
        searchController.obscuresBackgroundDuringPresentation = false
        navigationItem.searchController = searchController
        definesPresentationContext = true
        
...
        matchesLabel.font = UIFont(name: "SourceSansPro-Regular", size: 18)
        matchesLabel.numberOfLines = 1
        matchesLabel.lineBreakMode = .byWordWrapping
        matchesLabel.textColor = .darkGray
        matchesLabel.backgroundColor = .clear
        matchesLabel.textAlignment = .center;
        matchesLabel.text = "Item coming soon! Tap to add."
        
        nomatchesView!.isHidden = true
        nomatchesView!.addSubview(matchesLabel)
        
        activityIndicator.hidesWhenStopped = true
        activityIndicator.center = CGPoint(x: view.frame.width / 2, y: 22)
...
